Renew all 40 chapter examples with multi-file structure
Each chapter now demonstrates its core concept with focused code:
- Part 1 (Basics): richer single-file examples plus MathUtils helper for Ch.10
- Part 2 (OOP): split into Main + domain class files (Book, Product, Counter,
  Account, Member, Animal/Dog/Cat, Shape/Circle/Rectangle/Triangle,
  Vehicle/Car, Employee hierarchy, Printable/Payable/Document)
- Part 3 (Essential API): extracted User, InsufficientFundsException,
  BankAccount, Priority enum; broader coverage of String, StringBuilder,
  wrappers, exceptions, date/time
- Part 4 (Collections): split Box, Pair, Student record; deeper List/Set/Map
  examples plus Comparator chains
- Part 5 (Modern Java): split Outer, Calculator, Order, User, SafeCounter;
  richer streams, Optional, NIO Files, and ExecutorService usage

All 40 chapters compile and run cleanly on JDK 21.